--- a/Views/User/Login.cshtml
+++ b/Views/User/Login.cshtml
@@ -10,31 +10,30 @@
         @Html.AntiForgeryToken()
         <div class="Flex-box-row">
             <div class="Flex-box-col">
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
 
                 Email
-                <div class="Flex-box-field">
-                    <div class="Flex-box-input">
-                        <img src="~/Images/at.png" />
-                        @Html.TextBoxFor(model => model.email, new { htmlAttributes = new { @class = "form-control" } })
-                    </div>
-                    @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger" })
+
+                <div class="Flex-box-input">
+                    <img src="~/Images/at.png" />
+                    @Html.TextBoxFor(model => model.email, new { htmlAttributes = new { @class = "form-control" } })
                 </div>
-                
+
+
                 Hasło
-                <div class="Flex-box-field">
-                    <div class="Flex-box-input">
-                        <img src="~/Images/padlock.png" />
-                        @Html.PasswordFor(model => model.password, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
-                    </div>
-                    @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
+
+                <div class="Flex-box-input">
+                    <img src="~/Images/padlock.png" />
+                    @Html.PasswordFor(model => model.password, new { htmlAttributes = new { @class = "form-control" } })
                 </div>
+
                 <div class="Flex-box-checkbox">
                     @Html.CheckBox("isActive", false)
                     Zapamiętaj mnie!
                 </div>
                 <input type="submit" value="Zaloguj" />
+                @Html.ValidationSummary(false, "")
+
             </div>
         </div>
     }
