--- a/Views/User/Index.cshtml
+++ b/Views/User/Index.cshtml
@@ -7,55 +7,132 @@
 
 
 <main>
-    <dl class="Flex-box-col">
-        <dt>
-            @Html.DisplayNameFor(model => model.email)
-        </dt>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-        <dd>
-            @Html.DisplayFor(model => model.email)
-        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.password)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.password)
-        </dd>
+    </style>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.firstname)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.firstname)
-        </dd>
+    </head>
+    <body>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.lastname)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.lastname)
-        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.birthdate)
-        </dt>
+        <section class="py-5 text-center container">
+            <div class="row py-lg-5">
+                <div class="col-lg-6 col-md-8 mx-auto">
+                    <h1 class="fw-light">Siema</h1>
+                    Jakiś opis może
+                    <p>
+                        <input type="submit" value="Stwórz zbiórkę" />
+                        <input type="submit" value="Przeglądaj swoje zbiórki" />
+                    </p>
+                </div>
+            </div>
+        </section>
 
-        <dd>
-            @Html.DisplayFor(model => model.birthdate)
-        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.wallet)
-        </dt>
+        <div class="album py-5 bg-light">
+            <div class="container">
 
-        <dd>
-            @Html.DisplayFor(model => model.wallet)
-        </dd>
+                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+                    <div class="col">
+                        <div class="card shadow-sm">
+                            <img src="https://magazynvip.pl/wp-content/uploads/2019/04/AdobeStock_205831001-750x423.jpg" class="img-thumbnail" alt="...">
 
-    </dl>
+                            <div class="card-body">
+                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group">
+                                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                                    </div>
+                                    <small class="text-muted">9 mins</small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card shadow-sm">
+                            <img src="https://magazynvip.pl/wp-content/uploads/2019/04/AdobeStock_205831001-750x423.jpg" class="img-thumbnail" alt="...">
+
+                            <div class="card-body">
+                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group">
+                                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                                    </div>
+                                    <small class="text-muted">9 mins</small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card shadow-sm">
+                            <img src="https://magazynvip.pl/wp-content/uploads/2019/04/AdobeStock_205831001-750x423.jpg" class="img-thumbnail" alt="...">
+
+                            <div class="card-body">
+                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group">
+                                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                                    </div>
+                                    <small class="text-muted">9 mins</small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <dl class="Flex-box-col">
+            <dt>
+                @Html.DisplayNameFor(model => model.email)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.email)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.password)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.password)
+            </dd>
+            <dd>
+                @Html.DisplayFor(model => model.firstname)
+            </dd>
+            <dd>
+                @Html.DisplayFor(model => model.lastname)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.birthdate)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.birthdate)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.wallet)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.wallet)
+            </dd>
+
+
+
+
+        </dl>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    </body>
 </main>
 
